# RFM-dashboard

./: .gitignore  main.py  pyproject.toml  داشبورد RFM.py
data/: tip_names.txt
pages/: 1_تحلیل مشتری.py  2_سنجش عملکرد کمپین.py  2_پایش دسته ها.py  3_تحلیل سبد خرید مشتری.py  4_تحلیل فروش.py  4_تحلیل فروشنده.py  5_تحلیل کانال‌های فروش.py  6_استعلام اطلاعات مشتری.py  7_تحلیل ورود و خروج.py  7_تحلیل ورود&خروج.py  7_تحلیل چک‌این.py  8-رضایت مشتری.py  9-پشتیبانی.py
utils/: auth.py  constants.py  custom_css.py  funcs.py  load_data.py  logger.py  rfm_calculator.py  sheetConnect.py  write_data.py
