[project]
name = "rfm-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["db-dtypes>=1.4.3",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.35.0",
    "gspread>=6.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.0",
    "streamlit-nej-datepicker>=1.0.3",
    ]
